decress some info

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>นี่คือเนื้อหาหลักของหน้า (Main Content)</p>
         <section>
             <h2>ส่วนย่อยของเนื้อหา (Section)</h2>
-            <p>คุณสามารถเพิ่มองค์ประกอบต่างๆ เช่น รูปภาพ ลิงก์ หรือตารางได้ที่นี่</p>
+            <p>คุณสามารถเพิ่มองค์ประกอบต่างๆ </p>
         </section>
     </main>
 
