add footer from third branch

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <footer>
         <p>&copy; 2025 ชื่อบริษัทหรือชื่อของคุณ</p>
+        <p>
+            This is footer from thrid_branch
+        </p>
     </footer>
 
     <script src="script.js"></script>
